Fixed timeline images overlapping text.

--- a/Content/css/styles.css
+++ b/Content/css/styles.css
@@ -10258,7 +10258,7 @@ header.masthead .masthead-heading {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 40px;
+  left: 60px;
   width: 2px;
   margin-left: -1.5px;
   content: "";
@@ -10280,7 +10280,7 @@ header.masthead .masthead-heading {
   position: relative;
   float: right;
   width: 100%;
-  padding: 0 20px 0 100px;
+  padding: 0 20px 0 130px;
   text-align: left;
 }
 .timeline > li .timeline-panel:before {
@@ -10333,7 +10333,7 @@ header.masthead .masthead-heading {
 }
 .timeline > li.timeline-inverted > .timeline-panel {
   float: right;
-  padding: 0 20px 0 100px;
+  padding: 0 20px 0 130px;
   text-align: left;
 }
 .timeline > li.timeline-inverted > .timeline-panel:before {
